Fix some layout issues

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -18,7 +18,10 @@ a:hover {
 }
 #map {
     height: 100vh;
-    width: auto;
+}
+.col-sm-12 {
+    padding-left: 0;
+    padding-right: 0;
 }
 .mapHeadline {
     color: rgb(255,255,255);
@@ -55,4 +58,7 @@ a:hover {
     text-decoration: none;
     color: rgba(255, 255, 255, 0.7);
     animation: 4s ease 2s normal none infinite running bounce;
+}
+.leaflet-popup-content {
+    color: #333;
 }
